Created initial version of new shader method (Shader2.py).

--- a/templates/main.html
+++ b/templates/main.html
@@ -15,8 +15,8 @@
         <p id="instructions"><p class="mini-title">This title</p>These are test instructions and filler text used for the placement of this paragraph div please ignore the actual text in this div</p>
       </div>
         <div id="slidecontainer">
-          <button  data-xdh-onevent="" class="outline-button" type="button">Change Shader</button>
-          <button  data-xdh-onevent="" class="outline-button" type="button">Change Shader</button>
+          <button  data-xdh-onevent="ChangeShader" class="outline-button" type="button">Change Shader</button>
+          <button  data-xdh-onevent="ChangeShader" class="outline-button" type="button">Change Shader</button>
 
           <div id="slides">
           <input  data-xdh-onevent="" type="range" min="1" max="100" value="50" class="slider" id="img-threshold">
